--- a/config/config.json
+++ b/config/config.json
@@ -27,7 +27,6 @@
     "port": "5432",
     "dialect": "postgres",
     "seederStorage": "sequelize",
-    "seederStorageTableName": "sequelize_data",
-    "operatorsAliases": false
+    "seederStorageTableName": "sequelize_data"
   }
 }
