--- a/config/config.json
+++ b/config/config.json
@@ -27,6 +27,6 @@
     "port": "5432",
     "dialect": "postgres",
     "seederStorage": "sequelize",
-    "seederStorageTableName": "sequelize_data"
+    "seederStorageTableName": "sequelize_data",
   }
 }
