--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-fileupload": "^1.1.1-alpha.2",
+    "helmet": "^4.4.1",
     "jsonwebtoken": "^8.2.0",
     "multer": "^1.4.2",
     "pg": "^7.4.1",
