--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "graffiti-app",
   "version": "1.0.0",
-  "main": "app.js",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
@@ -38,7 +37,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server-test": "echo \"Error: no test specified\" && exit 1",
-    "server-start": "node app.js"
+    "server-start": "node index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
