add proxy send home res as text

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "server-test": "echo \"Error: no test specified\" && exit 1",
     "server-start": "node index.js"
   },
+  "proxy": "http://localhost:8000",
   "eslintConfig": {
     "extends": "react-app"
   },
