--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "graffiti-app",
   "version": "1.0.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "/src/App.js",
   "main": "server-app.js",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
