--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "server for graffiti app",
   "main": "server-app.js",
+  "engines": {
+    "node": "12.18.3",
+    "npm":"6.14.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server-app.js",
